# redis-sample

./: .gitignore  Cargo.toml  Makefile
script/: cargo_clean.sh
src/: hash_data.rs  lib.rs
