[package]
name = "redis_sample"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
redis = { version = "0.25", features = ["tokio-rustls-comp"] }

[dev-dependencies]
redis-test = { version = "0.4", features = ["aio"] }
